--- a/style.css
+++ b/style.css
@@ -17,11 +17,16 @@ ul {
     padding: 14px 16px;
     text-decoration: none;
   }
+  button a{
+    display: block;
+    color: rgb(248, 245, 245);
+    text-align: center;
+    text-decoration: none;
+  }
   
-  li a:hover {
+ li a:hover {
     background-color: rgb(97, 68, 209);
   }
- 
   body, html {
     height: 100%;
     margin: 0;
@@ -69,7 +74,6 @@ ul {
     box-sizing: border-box;
   }
   
-  /* style the container */
   .container {
     position: relative;
     border-radius: 5px;
@@ -77,7 +81,6 @@ ul {
     padding: 20px 0 30px 0;
   } 
   
-  /* style inputs and link buttons */
   input,
   .btn {
     width: 100%;
@@ -97,7 +100,6 @@ ul {
     opacity: 1;
   }
   
-  /* add appropriate colors to fb, twitter and google buttons */
   .fb {
     background-color: #3B5998;
     color: white;
@@ -112,8 +114,6 @@ ul {
     background-color: #dd4b39;
     color: white;
   }
-  
-  /* style the submit button */
   input[type=submit] {
     background-color: #773fc2;
     color: white;
@@ -123,8 +123,6 @@ ul {
   input[type=submit]:hover {
     background-color: #393069;
   }
-  
-  /* Two-column layout */
   .col {
     width: 50%;
     margin: auto;
@@ -132,15 +130,8 @@ ul {
     margin-top: 6px;
     text-align: center;
   }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  .bottom-container {
+
+    .bottom-container {
     text-align: center;
     background-color: #666;
     border-radius: 0px 0px 4px 4px;
